data/derived/sp14/progs/unify/prog0071.ml.out
Characters 8-17:
  let _ = max_float(2.0);;
          ^^^^^^^^^
Error: This expression has type float
       This is not a function; it cannot be applied.
